--- a/resources/data/CBCStations.html
+++ b/resources/data/CBCStations.html
@@ -124,10 +124,10 @@
 		        <li><a class="playStream" target="_parent" href="/stream/genre/blues/blues-classics">Blues Classics</a><span class="streamUrl"><a href="http://playerservices.streamtheworld.com/pls/CBC_BLCLAS_H.pls">http://playerservices.streamtheworld.com/pls/CBC_BLCLAS_H.pls</a></span></li>  
 	        </ul>
         </div>
-        <div class="channel" id="R & B / SOUL"><h3>R&amp;B / SOUL</h3>
+        <div class="channel" id="R & B / SOUL"><h3>R & B / SOUL</h3>
 	        <ul class="streams">
-		        <li><a class="playStream" target="_parent" href="/stream/genre/rb-soul/rb-soul">R&amp;B/Soul</a><span class="streamUrl"><a href="http://playerservices.streamtheworld.com/pls/CBC_RBSOUL_H.pls">http://playerservices.streamtheworld.com/pls/CBC_RBSOUL_H.pls</a></span></li>  
-		        <li><a class="playStream" target="_parent" href="/stream/genre/rb-soul/classic-soul-rb">Classic Soul/R&amp;B</a><span class="streamUrl"><a href="http://playerservices.streamtheworld.com/pls/CBC_SOULCL_H.PLS">http://playerservices.streamtheworld.com/pls/CBC_SOULCL_H.PLS</a></span></li>  
+		        <li><a class="playStream" target="_parent" href="/stream/genre/rb-soul/rb-soul">R & B/Soul</a><span class="streamUrl"><a href="http://playerservices.streamtheworld.com/pls/CBC_RBSOUL_H.pls">http://playerservices.streamtheworld.com/pls/CBC_RBSOUL_H.pls</a></span></li>  
+		        <li><a class="playStream" target="_parent" href="/stream/genre/rb-soul/classic-soul-rb">Classic Soul/R & B</a><span class="streamUrl"><a href="http://playerservices.streamtheworld.com/pls/CBC_SOULCL_H.PLS">http://playerservices.streamtheworld.com/pls/CBC_SOULCL_H.PLS</a></span></li>  
 	        </ul>
         </div>
         <div class="channel" id="HIP HOP"><h3>HIP HOP</h3>
